Copyright (C) 2002-2019 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.5.90 (git)

* Fixes in the 'mail' utility

** New mailbox notation @

@ can be used with any command requring a mailbox name to refer to the
file given with the -f option.

** showenvelope

With the showenvelope variable set, mail incorrectly displayed
envelope on the stdout, instead of using the current output stream.

** pipe command

Last argument always specifies the command to pipe messages to.

** fixed / and :/ searches in message sets

** Fix and improve argument completion

** Don't print original file name, use postprocessed URL representation

The original file name might contain passwords (if it refers to a
remote mailbox).

** Improve folder handling and name expansion

** Fix header display after deletions

* Fixes in IMAP client library

** Speed up opening IMAP mailboxes

Initial scan of an imap mailbox retrieves, among other data, message headers.
This considerably speeds up the operation of such tools as mail
(initial loading), frm or from.

** handle EXPUNGE response

This fixes interoperation with Dovecot imap.

** fix incorporation of new messages

* Improved documentation


Version 3.5 - 2018-10-27

* Support for Guile version 2.2.0 and later

Support for prior versions has been withdrawn.

* New scheme functions

** mu-encoder-port port name . args

Create encoding port using Mailutils filter <name> with optional arguments
<args>. The <port> argument must be a port opened either for writing
or for reading, but not both. The returned port will have the same
mode as <port>.

If <port> is open for reading, data will be read from it, passed through the
filter and returned. If it is open for writing, data written to the returned
port will be passed through filter and its output will be written to <port>.

** mu-decoder-port port name . args
