@@ -13,6 +13,12 @@ Version 3.5.90 (git)
 @ can be used with any command requring a mailbox name to refer to the
 file given with the -f option.
 
+** Sender addresses in message sets
+
+Arbitrary string in message set is treated as sender address. It
+expands to all messages whose sender addresses as displayed in a header
+summary match the string.
+
 ** showenvelope
 
 With the showenvelope variable set, mail incorrectly displayed
